add utility methods